# jira-emulator

./: .dockerignore  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  SPECIFICATION.md  jira-mcp-request.md  pyproject.toml  requirements.txt  supervisord.conf
mcp_servers/: atlassian_jira.py
references/: jira-api-deprecation-notes.md  jira-attachments-specification.md  jira-authentication-specification.md  jira-configuration-enhancement.md  jira-rest-api-v2-endpoints.md  jql-specification.md
scripts/: import-tickets.sh
src/jira_emulator/: __init__.py  __main__.py  adf.py  app.py  config.py  database.py  exceptions.py
src/jira_emulator/auth/: middleware.py
src/jira_emulator/jql/: functions.py  grammar.py  parser.py  transformer.py
src/jira_emulator/models/: __init__.py  api_token.py  attachment.py  comment.py  component.py  custom_field.py  issue.py  issue_history.py  issue_type.py  label.py  link.py  priority.py  project.py  resolution.py  sprint.py  status.py  user.py  version.py  watcher.py  workflow.py
src/jira_emulator/routers/: admin.py  attachments.py  auth.py  fields.py  issues.py  links.py  metadata.py  projects.py  search.py  tokens.py  users.py
src/jira_emulator/schemas/: __init__.py  admin.py  auth.py  (+4 more)
tests/: conftest.py  test_adf.py  test_auth.py  test_client_compat.py  test_field_selection.py  test_import.py  test_issues.py  test_jql.py  test_links.py  test_metadata.py  test_projects.py  test_search.py  test_tokens.py  test_transitions.py  test_update_ops.py  test_watchers.py
tests/fixtures/: bulk_issues.json  single_issue.json
(+19 files in other folders)
