[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-emulator"
version = "0.1.0"
description = "A lightweight Jira REST API v2 emulator for offline development and testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "lark>=1.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "bcrypt>=4.1",
    "python-multipart>=0.0.7",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
